home/audiobookshelf/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: audiobookshelf
  name: audiobookshelf
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: audiobookshelf
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      automountServiceAccountToken: false
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf:2.21.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: abs-config
            - mountPath: /metadata
              name: abs-metadata
            - mountPath: /audiobooks
              name: abs-audiobooks
            - mountPath: /podcasts
              name: abs-podcasts
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
              ephemeral-storage: 256Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: abs-config
          persistentVolumeClaim:
            claimName: abs-config
        - name: abs-metadata
          persistentVolumeClaim:
            claimName: abs-metadata
        - name: abs-audiobooks
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/multimedia/audiobooks
        - name: abs-podcasts
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/multimedia/podcasts
