home/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Audio Books
    gethomepage.dev/group: Home
    gethomepage.dev/icon: audiobookshelf.png
    gethomepage.dev/name: Audio Bookshelf
    gethomepage.dev/widget.type: "audiobookshelf"
    gethomepage.dev/widget.url: "http://audiobookshelf"
    gethomepage.dev/widget.key: "<path:kv/data/homepage#audiobookshelf-key>"
spec:
  ingressClassName: nginx
  rules:
    - host: audiolib.<homelab-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
  tls:
    - hosts:
        - audiolib.<homelab-domain>
      secretName: "audiolib.<homelab-domain>-cert"
